# pydantic-wizard

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  docs.yml  publish.yml
docs/: index.md
docs/api/: introspection.md  serialization.md  type-handlers.md  validation.md
docs/development/: contributing.md
docs/getting-started/: installation.md  quickstart.md
docs/guide/: cli-commands.md  programmatic-api.md  supported-types.md
examples/: trading_config.py
pydantic_wizard/: __init__.py  app.py  display.py  exceptions.py  prompts.py  serialization.py  validation.py
pydantic_wizard/streamlit_ui/: __init__.py  app.py  model_form.py  utils.py  widgets.py
pydantic_wizard/streamlit_ui/views/: edit_config.py  new_config.py  show_schema.py  validate_page.py
scripts/: release.sh
src/pydantic_wizard/: display.py  introspection.py  serialization.py  type_handlers.py
tests/: conftest.py  test_app.py  test_display.py  test_exceptions.py  test_introspection.py  test_serialization.py  test_serialization_errors.py  test_streamlit_app.py  test_streamlit_utils.py  test_type_handlers.py  test_validation.py
