[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pydantic-wizard"
version = "0.1.0"
description = "Interactive wizard-style CLI for configuring Pydantic v2 models, with YAML serialization."
readme = "README.md"
license = "MIT"
authors = [{ name = "Gianluca Pagliara", email = "pagliara.gianluca@gmail.com" }]
requires-python = ">=3.13,<3.14"
classifiers = [
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Typing :: Typed",
]
dependencies = [
  "pydantic>=2.0",
  "typer>=0.15",
  "rich>=13.0",
  "questionary>=2.0",
  "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "ruff",
  "mypy",
  "types-PyYAML",
]

[project.scripts]
pydantic-wizard = "pydantic_wizard.app:app"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]
include = ["pydantic_wizard*"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = [
  "E",
  "W",
  "F",
  "I",
  "C",
  "B",
  "UP",
]
ignore = [
  "C901",
  "E203",
  "E501",
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
strict = true
ignore_missing_imports = true
disable_error_code = ["misc"]
exclude = ["tests/.*"]
namespace_packages = true
explicit_package_bases = true
mypy_path = ["src"]
